--- a/package.json
+++ b/package.json
@@ -8,9 +8,13 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "buefy": "^0.9.7",
     "core-js": "^3.6.5",
+    "konva": "^7.2.5",
     "vue": "^2.6.11",
     "vue-class-component": "^7.2.3",
+    "vue-i18n": "^8.24.4",
+    "vue-konva": "^2.1.7",
     "vue-property-decorator": "^9.1.2"
   },
   "devDependencies": {
