--- a/package.json
+++ b/package.json
@@ -5,11 +5,14 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "postinstall": "npm run build",
+    "start": "node server.js"
   },
   "dependencies": {
     "buefy": "^0.9.7",
     "core-js": "^3.6.5",
+    "express": "^4.17.1",
     "konva": "^7.2.5",
     "vue": "^2.6.11",
     "vue-class-component": "^7.2.3",
