--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,8 +12,10 @@
     "allowSyntheticDefaultImports": true,
     "sourceMap": true,
     "baseUrl": ".",
+    "typeRoots": [ "node_modules/@types" ],
     "types": [
-      "webpack-env"
+      "webpack-env",
+      "resize-observer-browser",
     ],
     "paths": {
       "@/*": [
