--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "vue-class-component": "^7.2.3",
     "vue-i18n": "^8.24.4",
     "vue-konva": "^2.1.7",
-    "vue-property-decorator": "^9.1.2"
+    "vue-property-decorator": "^9.1.2",
+    "vue2-hammer": "^2.1.2"
   },
   "devDependencies": {
     "@types/resize-observer-browser": "^0.1.5",
+    "@types/vue2-hammer": "^2.1.2",
     "@typescript-eslint/eslint-plugin": "^4.18.0",
     "@typescript-eslint/parser": "^4.18.0",
     "@vue/cli-plugin-babel": "~4.5.0",
