--- a/package.json
+++ b/package.json
@@ -13,17 +13,17 @@
     "buefy": "^0.9.7",
     "core-js": "^3.6.5",
     "express": "^4.17.1",
+    "hammerjs": "^2.0.8",
     "konva": "^7.2.5",
     "vue": "^2.6.11",
     "vue-class-component": "^7.2.3",
     "vue-i18n": "^8.24.4",
     "vue-konva": "^2.1.7",
-    "vue-property-decorator": "^9.1.2",
-    "vue2-hammer": "^2.1.2"
+    "vue-property-decorator": "^9.1.2"
   },
   "devDependencies": {
+    "@types/hammerjs": "^2.0.39",
     "@types/resize-observer-browser": "^0.1.5",
-    "@types/vue2-hammer": "^2.1.2",
     "@typescript-eslint/eslint-plugin": "^4.18.0",
     "@typescript-eslint/parser": "^4.18.0",
     "@vue/cli-plugin-babel": "~4.5.0",
